<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">

    <!-- AndroidManifest.xml strings -->
    <string name="app_name">Music Lessons</string>

    <!-- Data provider authority -->
    <string name="authority">com.mstoyanov.music_lessons.data</string>

    <!-- MainActivity tab titles: -->
    <string name="title_section_0">Schedule</string>
    <string name="title_section_1">Students</string>
    <string name="title_section_2">Add Student</string>

    <!-- "Add Student" fragment hints -->
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="home_phone_hint">Home </string>
    <string name="cell_phone_hint">Cell </string>
    <string name="work_phone_hint">Work </string>
    <string name="email_hint">Email</string>

    <!-- SettingsActivity resources: -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_heading">Teacher\'s Credentials:</string>

    <!-- Menu strings: -->
    <string name="menu_back">Back</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_export_schedule">Export</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_backup">Backup</string>

    <!-- Dialog strings: -->
    <string name="delete_student_dialog">Delete student?</string>
    <string name="delete_dialog">Delete</string>
    <string name="cancel_dialog">Cancel</string>

    <!-- Labels: -->
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="student">Student:</string>
    <string name="dash">-</string>
    <string name="desc">Icon</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home:</string>
    <string name="cell">Mobile:</string>
    <string name="work">Work:</string>
    <string name="email">Email:</string>

    <!-- Weekdays array: -->
    <string-array name="weekdays_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <!-- Times from array wekdays: -->
    <string-array name="weekdays_times_from_array">
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
    </string-array>

    <!-- Times to array wekdays: -->
    <string-array name="weekdays_times_to_array">
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
    </string-array>

    <!-- Times from array Saturday: -->
    <string-array name="saturday_times_from_array">
        <item>08:30</item>
        <item>08:45</item>
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
    </string-array>

    <!-- Times to array Saturday: -->
    <string-array name="saturday_times_to_array">
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
    </string-array>

</resources>