<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/add_student_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/first_name_hint"
            android:inputType="textCapWords"
            android:maxLength="24" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/last_name_hint"
            android:inputType="textCapWords"
            android:maxLength="24" />

        <EditText
            android:id="@+id/home_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/home_phone_hint"
            android:inputType="phone"
            android:maxLength="32" />

        <EditText
            android:id="@+id/cell_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/cell_phone_hint"
            android:inputType="phone"
            android:maxLength="32" />

        <EditText
            android:id="@+id/work_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/work_phone_hint"
            android:inputType="phone"
            android:maxLength="32" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="128" />
    </LinearLayout>

</ScrollView>