<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/weekdays_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/time_from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:text="@string/from"
            android:textColor="@color/add_lesson_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/time_from_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/time_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:text="@string/to"
            android:textColor="@color/add_lesson_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/time_to_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/student_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:text="@string/student"
            android:textColor="@color/add_lesson_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/student_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp" />
    </LinearLayout>

</ScrollView>